k8s-yaml/jaspershop-api.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: staging
  name: jaspershop-public
  labels:
    app: jaspershop
spec:
  type: NodePort
  ports:
  - name: jaspershop-port
    protocol: TCP
    port: 80
    targetPort: jaspershop-port
  selector:
    app: jaspershop
---
kind: Service
apiVersion: v1
metadata:
  namespace: staging
  name: jaspershop
  labels:
    app: jaspershop
spec:
  type: ClusterIP
  ports:
  - name: jaspershop
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: jaspershop
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: staging
  name: jaspershop
  labels:
    app: jaspershop
spec:
  replicas: 3
  selector:
    matchLabels:
      app: jaspershop
  template:
    metadata:
      annotations:
        version: latest
      labels:
        app: jaspershop
    spec:
      containers:

      - name: nginx
        image: nginx:stable
        ports:
          - containerPort: 80
        volumeMounts:
          - name: nginx-conf-volume
            mountPath: /etc/nginx/conf.d
          - name: sock-volume
            mountPath: /usr/src/app/
          - name: static-volume
            mountPath: /usr/src/app/static/

      - name: api
        image: suiyang03/k8s-jenkins-django-jasper-shop_api:latest
        imagePullPolicy: Always
        command: ["/bin/sh","-c"]
        args: [" mkdir volume/static/ -p; python manage.py collectstatic --noinput; cp -R ./static/ ./volume/; uwsgi --ini uwsgi.ini;"]
        volumeMounts:
          - name: sock-volume
            mountPath: /usr/src/app/socket/
          - name: static-volume
            mountPath: /usr/src/app/volume/static/
      
      volumes:
        - name: nginx-conf-volume
          configMap:
            name: nginx-conf
            items:
            - key: jaspershop-nginx.conf
              path: jaspershop-nginx.conf
        - name: static-volume
          emptyDir: {}
        - name: sock-volume
          emptyDir: {}
