k8s-yaml/jaspershop-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaspershop-db
  labels:
    app: mysql
spec:
  type: NodePort
  selector:
      app: mysql
  ports:
  - protocol : TCP
    nodePort: 30307
    port: 3306
    targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaspershop-db
spec:
  selector:
    matchLabels:
      app: mysql 
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers: 
        - image: mysql
          name: mysql-con
          imagePullPolicy: Always
          args: ["--default-authentication-plugin=mysql_native_password"]
          ports:
            - containerPort: 3306 
              name: mysql 
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
