k8s-yaml/rabbitmq.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: staging
  name: jaspershop-rabbitmq
  labels:
    app: jaspershop-rabbitmq
spec:
  type: ClusterIP
  ports:
  - name: amqp
    protocol: TCP
    port: 5672
    targetPort: 5672
  - name: management
    protocol: TCP
    port: 15672
    targetPort: 15672
  selector:
    app: jaspershop-rabbitmq
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: staging
  name: jaspershop-rabbitmq
  labels:
    app: jaspershop-rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaspershop-rabbitmq
  template:
    metadata:
      annotations:
        version: latest
      labels:
        app: jaspershop-rabbitmq
    spec:
      containers:
      - name: jaspershop-rabbitmq
        image: rabbitmq:3.6.11-management-alpine
        ports:
        - containerPort: 5672
          name: amqp
        - containerPort: 15672
          name: management
