k8s-yaml/basic-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: basic-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: japsershop-public
          servicePort: jaspershop-port
